Added about page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>GitBauble.com | Brighten your day</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -31,12 +32,12 @@
     <div class="container">
             
         <nav class="navbar navbar-transparent">
-            <a class="brand">
+            <a class="brand" href="index.html">
                 <img id="logo" src="logo.png" alt="">
                 GitBauble
             </a>
             <span class="nav-elements">
-                <a href="">About</a>
+                <a href="about.html">About</a>
                 <a href="">Features</a>
                 <a href="">Contact</a>
             </span>
@@ -118,8 +119,8 @@
         <div class="row">
             <div class="col-xs-12 col-centered">
                 <ul>
-                    <li><a>Home</a></li>
-                    <li><a href="">About</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="">Features</a></li>
                     <li><a href="">Contact</a></li>
                     <li class="faded">Website by Ryan O'Neill | rbo11oneill@gmail.com | Made with Vanilla HTML/CSS/JS </li>
