Added contact page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <span class="nav-elements">
                 <a href="about.html">About</a>
                 <a href="">Features</a>
-                <a href="">Contact</a>
+                <a href="contact.html">Contact</a>
             </span>
         </nav>
         <div class="row" style="margin: auto;">
@@ -122,8 +122,8 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="">Features</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li class="faded">Website by Ryan O'Neill | rbo11oneill@gmail.com | Made with Vanilla HTML/CSS/JS </li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li class="faded">Website by Ryan O'Neill | rbo11oneill@gmail.com | Made with HTML/CSS/JS </li>
                 </ul>
             </div>
         </div>
