--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                         Contact
                     </h1>
                     <h3>Feel free to reach out to us, we will get back to you as soon as possible!</h3>
-                    <form action="https://formspree.io/address@email.tld" method="POST" >
+                    <form action="https://formspree.io/support@gitbauble.com" method="POST" >
                         <div class="form-group">
                             <label for="InputEmail1">Email address</label>
                             <input type="email" name="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
