Form submit button sorted out

--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
                         <div class="form-group">
                                 <label for="InputBody">Message</label>
                                 <textarea type="text" name="body" class="form-control" id="InputBody" placeholder="Enter Message" rows="3"></textarea>                        </div>
-                        <button type="submit" class="cta">Send</button>
+                        <button type="submit" class="cta" id="form_submit">Send</button>
                     </form>
             </div>
         </div>
