Added features page

--- a/about.html
+++ b/about.html
@@ -37,21 +37,21 @@
             </a>
             <span class="nav-elements">
                 <a href="about.html">About</a>
-                <a href="">Features</a>
+                <a href="features.html">Features</a>
                 <a href="contact.html">Contact</a>
             </span>
         </nav>
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2 about">
                 <h1>
-                    About GitBauble
+                    About
                 </h1>
                 <h3>A story of how a simple project to make the lives of developers more fun turned into an in-demand product.</h3>
                 <p>During one of his summers as an intern out in San Francisco, Ryan was sitting at his work
                     desk next to his team, headphones in just grinding away at work. To him, this was a common experience.
                     Of course his teammates talked and interacted with one another, but there were long periods during the day where
-                    everybody would be furiously typing away. Ryan noticed that when this was happening, the amount of commits/pushes/merges
-                    that were happening was astronomical. Everybody was doing so much work, yet the only way you would know is by the dull ring
+                    everybody would be furiously typing away. Ryan noticed that when everybody would get into hardcore work mode, the amount of commits/pushes/merges
+                    that would happen was astronomical. Everybody was doing so much work, yet the only way you would know is by the dull ring
                     of an email notification in your inbox.
                 </p>
                 <p>
@@ -84,7 +84,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="">Features</a></li>
+                        <li><a href="features.html">Features</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li class="faded">Website by Ryan O'Neill | rbo11oneill@gmail.com | Made with HTML/CSS/JS </li>
                     </ul>
