--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </a>
             <span class="nav-elements">
                 <a href="about.html">About</a>
-                <a href="">Features</a>
+                <a href="features.html">Features</a>
                 <a href="contact.html">Contact</a>
             </span>
         </nav>
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div class="row" style="margin: auto;">
-            <a class="col-xs-12 col-sm-3 cta">
+            <a href="features.html" class="col-xs-12 col-sm-3 cta">
                 Learn More
             </a>
             <div class="col-xs-12 col-sm-9">
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="row" id="second_cta">
-                <a class="col-xs-12 col-sm-4 col-centered cta">
+                <a href="features.html" class="col-xs-12 col-sm-4 col-centered cta">
                     See all features
                 </a>
             </div>
@@ -121,7 +121,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="">Features</a></li>
+                    <li><a href="features.html">Features</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li class="faded">Website by Ryan O'Neill | rbo11oneill@gmail.com | Made with HTML/CSS/JS </li>
                 </ul>
