--- a/features.html
+++ b/features.html
@@ -43,29 +43,50 @@
         </nav>
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2 about">
-                    <h1>
-                        Contact
-                    </h1>
-                    <h3>Feel free to reach out to us, we will get back to you as soon as possible!</h3>
-                    <form action="https://formspree.io/support@gitbauble.com" method="POST" >
-                        <div class="form-group">
-                            <label for="InputEmail1">Email address</label>
-                            <input type="email" name="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                        </div>
-                        <div class="form-group">
-                            <label for="InputSubject">Reason for contacting</label>
-                            <input type="text" name="subject" class="form-control" id="InputSubject" placeholder="Enter Subject">
-                        </div>
-                        <div class="form-group">
-                                <label for="InputBody">Message</label>
-                                <textarea type="text" name="body" class="form-control" id="InputBody" placeholder="Enter Message" rows="3"></textarea>                        </div>
-                        <button type="submit" class="cta" id="form_submit">Send</button>
-                    </form>
+                <h1>
+                    Features
+                </h1>
+                <h3>Everything you need to know about what GitBauble is, and how to use it.</h3>
             </div>
         </div>
+        <div class="row">
+            <div class="col-sm-4 col-sm-offset-2">
+                <p>Simply put, GitBauble is a IoT connected toy that dances whenever you program it to.
+                The most common use is to have your GitBauble connected as a webhook on any of your GitHub repositories. However,
+                since GitBauble is developer centered, we made sure to give you the ability to connect it to anything you want.
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <img class="features_img" src="gitbauble_2.gif" alt="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4 col-sm-offset-2">
+                <img class="features_img" src="features_colors.png" alt="">
+            </div>
+            <div class="col-sm-4">
+                <p>
+                    Additionally, GitBauble also can be a physical representation of your current local computer's git status.
+                    Your GitBauble will turn green when your local repo is clean, and has no changes. It will turn red when you have uncommitted changes,
+                    and it will turn yellow when you have committed changes that have not yet been pushed.
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4 col-sm-offset-2">
+                <p id="last_p"> GitBauble has an beginner friendly API which makes connecting your GitBauble to any of your projects very easy. 
+                    Simply send an application/json POST request to http://gitbauble.com/dance. The only other step is you need to set a header 
+                    property in your request as 'X-Hub-Signature' or 'Bauble-Signature' with the 20 digit key that was provided with your GitBauble purchase.
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <img class="features_img" src="api.png" alt="">
+            </div>
+        </div>
+
     </div>
 </div>
+
 <footer class="container-fluid">
         <div class="container">
             <div class="row">
