Fixed spelling mistakes

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                 </p>
                 <p>
                     During these days Ryan had a simple thought, "How could I make these work grinds more enjoyable?" 
-                    Overtime, the idea sprung in his head, why not make a little toy that cheers or claps for you when close a Pull Request?
+                    Overtime, the idea sprung in his head, why not make a little toy that cheers or claps for you when you close a Pull Request?
                     From this idea, he began trying, and ultimately failing to implement a piece of hardware that could do what he wanted.
                 </p>
                 <p>However, he would not give up - he was determined to make this project a reality. After many discussions with friends and family
@@ -67,7 +67,7 @@
                     need to give developers end-points to be able to do with what they please. On top of this, GitBauble also began to
                     become a little bit more practical for developers. Instead of just dancing whenever you want, your GitBauble can also
                     be hooked up with your current local git repo and will change colors depending on its current status. Suddenly, GitBauble
-                    has transformed from a simple toy to make people smile, to a toy that - while still playful and fun - actually had some usefulness.
+                    has transformed from a simple toy to make people smile, to a toy that - while still playful and fun - actually has some usefulness.
                 </p>
                 <p>
                     GitBauble is still in the process of coming to market, but if you're interested in the overall progess of GitBauble, please feel 
