--- a/features.html
+++ b/features.html
@@ -51,7 +51,7 @@
         </div>
         <div class="row">
             <div class="col-sm-4 col-sm-offset-2">
-                <p>Simply put, GitBauble is a IoT connected toy that dances whenever you program it to.
+                <p>Simply put, GitBauble is an IoT connected toy that dances whenever you program it to.
                 The most common use is to have your GitBauble connected as a webhook on any of your GitHub repositories. However,
                 since GitBauble is developer centered, we made sure to give you the ability to connect it to anything you want.
                 </p>
@@ -74,9 +74,9 @@
         </div>
         <div class="row">
             <div class="col-sm-4 col-sm-offset-2">
-                <p id="last_p"> GitBauble has an beginner friendly API which makes connecting your GitBauble to any of your projects very easy. 
-                    Simply send an application/json POST request to http://gitbauble.com/dance. The only other step is you need to set a header 
-                    property in your request as 'X-Hub-Signature' or 'Bauble-Signature' with the 20 digit key that was provided with your GitBauble purchase.
+                <p id="last_p"> GitBauble has a beginner friendly API which makes connecting your GitBauble to any of your projects very easy. 
+                    Simply send an application/json POST request to http://gitbauble.com/dance. The only other step you need is to set a header 
+                    property in your request as 'X-Hub-Signature' or 'Bauble-Signature' with the 20 digit key that is provided with your GitBauble purchase.
                 </p>
             </div>
             <div class="col-sm-4">
