--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
     </div>
 </footer>
 
+<script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
+<script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us20.list-manage.com","uuid":"c3603e350f539e9fa365c96ee","lid":"3bce3ad88d","uniqueMethods":true}) })</script>
 <script>
     // function([string1, string2],target id,[color1,color2])    
  consoleText(['GitBauble', 'Brighten your day.'], 'text',['#272733', '#272733']);
