--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <meta name="author" content="Ryan O'Neill">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <meta name="p:domain_verify" content="6c5e958fb45925203097b273fa9d93f4">
 
     <link rel="stylesheet" type="text/css" href="styles.css">
 
